# indicator-ai-companion

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  docker-compose.yml
bridge/: .dockerignore  .env.example  Dockerfile  pyproject.toml
bridge/indicator_bridge/: __init__.py  __main__.py  app.py  cards.py  companion.py  config.py  demo.py  device.py  i18n.py
docs/: ARCHITECTURE.md  RP2040-BUZZER.md
firmware/: glyphs_full.yaml  glyphs_zh.yaml  images.yaml  indicator-companion.yaml  secrets.yaml.example
firmware/fonts/: extract-font.py
firmware/images/: gen-claude.py  gen-codex.py  gen-eyes.py
hooks/: codex-hooks.snippet.json  push-event.sh  settings.snippet.json  statusline-wrapper.sh
